--- a/DemensDel2/DemensDel2/Views/User/Index.cshtml
+++ b/DemensDel2/DemensDel2/Views/User/Index.cshtml
@@ -1,9 +1,6 @@
-﻿@model IEnumerable<string>
+﻿@model User
 @{
     ViewData["Title"] = "User";
 }
 
-@foreach (var item in Model)
-{
-    <p>@item</p>
-}
+@Model.Name
