--- a/DemensDel2/DemensDel2/Views/User/Exercise.cshtml
+++ b/DemensDel2/DemensDel2/Views/User/Exercise.cshtml
@@ -1,17 +1,28 @@
-﻿@model DemensDel2.Models.ExerciseDTO
+﻿@model DemensDel2.Models.TrainingSession
+
 
 @{
     ViewData["Title"] = "Exercise";
 }
 
-<h2>@Model.Name</h2>
-
 <div>
+    <h2>Træningsektion - Dato</h2>
+    @foreach (var e in Model.Exercises)
+    {
+        <a href="">@e.ExerciseType.Name</a>
+    }
+</div>
+
+
+@*<h2>@Model.Name</h2>
+
+<div id="">
     <hr />
     <dl class="dl-horizontal">
         <dt>
             Beskrivelse:
         </dt>
+
         <dd>
             @Html.DisplayFor(model => model.Description)
         </dd>
@@ -59,7 +70,7 @@
             @Html.DisplayFor(model => model.Effort)
         </dd>
     </dl>
-</div>
+</div>*@
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Tilbage til listen</a>
