--- a/DemensDel2/DemensDel2/Views/User/Index.cshtml
+++ b/DemensDel2/DemensDel2/Views/User/Index.cshtml
@@ -49,4 +49,16 @@
 </div>
 
 <div class="ExerciseList">
+    @foreach (var item in Model.TrainingSessions)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)<br/>                    
+            </td>
+            <td>                 
+                @Html.DisplayFor(modelItem => item.Percent)<br/>
+            </td>
+
+        </tr>
+    }
 </div>
