--- a/DemensDel2/DemensDel2/Views/Admin/Index.cshtml
+++ b/DemensDel2/DemensDel2/Views/Admin/Index.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div id="MakeNewTrainingSession" class="row">
     <div class="col-md-4">
-        <form asp-action="Index" asp-controller="Admin" method="post">
+        <form asp-action="CreateTrainingsession" asp-controller="Admin" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
