--- a/DemensDel2/DemensDel2/Views/User/Index.cshtml
+++ b/DemensDel2/DemensDel2/Views/User/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using Microsoft.AspNetCore.Rewrite.Internal
-@model User
+﻿@using DemensDel2.Models.DTO
+@using Microsoft.AspNetCore.Rewrite.Internal
+@model UserWithTrainingSessionDTO
 @{
     ViewData["Title"] = "User";
 }
