Repository pattren + unit of work + html and css changes

--- a/DemensDel2/DemensDel2/Views/User/TrainingSession.cshtml
+++ b/DemensDel2/DemensDel2/Views/User/TrainingSession.cshtml
@@ -54,21 +54,21 @@
             <dt>
                 UførelsesProcent:
             </dt>
-            @*<dd>
-                @Html.DisplayFor(model => model.SlectedExercise.ExecutionRate)
+            <dd>
+                @Html.DisplayFor(model => model.ExerciseResult.ExecutionRate)
             </dd>
             <dt>
                 SmerteNiveau:
             </dt>
             <dd>    
-                @Html.DisplayFor(model => model.SlectedExercise.PaintLevel)
+                @Html.DisplayFor(model => model.ExerciseResult.PaintLevel)
             </dd>
             <dt>
                 Indsats:
             </dt>
             <dd>
-                @Html.DisplayFor(model => model.SlectedExercise.Effort)
-            </dd>*@
+                @Html.DisplayFor(model => model.ExerciseResult.Effort)
+            </dd>
         </dl>
     </div>
     <div>
