--- a/DemensDel2/DemensDel2/Views/User/Index.cshtml
+++ b/DemensDel2/DemensDel2/Views/User/Index.cshtml
@@ -6,6 +6,7 @@
 }
 
 <div class="UserInfo">
+    <h3>Bruger Info</h3>
     <dl class="dl-horizontal">
         <dt>
             Navn
@@ -56,7 +57,7 @@
 </div>
 
 <div class="ExerciseGraph">
-    <canvas id="chart" data-Exercise="1,1" data-ExerciseData="2,2"></canvas>
+    <canvas id="chart" data-Exercise="1,2,3" data-ExerciseData="80,54,92"></canvas>
 </div>
 
 
